[package]
name = "minecraft-flipbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["cargo", "env", "unicode", "wrap_help", "string"] }
image = "0.24.5"
once_cell = "1.17.0"
serde_json = "1.0"
tempdir = "0.3.7"
